--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="%PUBLIC_URL%/assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link href="%PUBLIC_URL%/assets/css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/assets/css/sb-admin-2.css" rel="stylesheet">
 
     <title>Breeze-Metéo</title>
   </head>
