--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,6 @@
     <script src="%PUBLIC_URL%/assets/vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="%PUBLIC_URL%/assets/js/sb-admin-2.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/sb-admin-2.js"></script>
   </body>
 </html>
