--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link href="%PUBLIC_URL%/assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="%PUBLIC_URL%/assets/css/sb-admin-2.css" rel="stylesheet">
 
-    <title>Breeze-Metéo</title>
+    <title>AMET STAT</title>
   </head>
   <body  id="page-top">
     <noscript>You need to enable JavaScript to run this app.</noscript>
